sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:20: error: Unmatched closing brace '}' ignored here
      }
      ^AlgCombSort:23: error: eof expected but '}' found.
}
^